syntax = "proto3";
package kk_etcd_models;

option go_package = "./;kk_etcd_models";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=./dart *.proto

message PBKV {
  string  Key = 1;
  string  Value = 2;
}


message PBListKV {
  repeated PBKV ListKV = 1;
}